# amocrm-tokens

./: .gitignore  Dockerfile  docker-compose.yml  init.sql  pyproject.toml
app/: main.py
app/api/v1/: auth.py  token.py
app/core/: config.py
app/db/: session.py
app/models/: token.py
app/services/: access_token.py
